✏️ Fix the broken reference links in the document.

--- a/docs/contents/development/architecture/index.mdx
+++ b/docs/contents/development/architecture/index.mdx
@@ -12,25 +12,25 @@ This section provides comprehensive documentation of the Slack MCP Server archit
 
 The Slack MCP Server is built with a modular architecture that supports multiple deployment modes and integration patterns:
 
-### **🏗️ [Project Structure](./project-structure)**
+### **🏗️ [Project Structure](/dev/next/architecture/project-structure)**
 - Overall source code organization
 - Design patterns and principles
 - Directory structure and key components
 - Development workflow and conventions
 
-### **🔧 [MCP Server Architecture](./mcp-server-architecture)**
+### **🔧 [MCP Server Architecture](/dev/next/architecture/mcp-server-architecture)**
 - Model Context Protocol implementation
 - Transport mechanisms (stdio, SSE, HTTP)
 - Tool registration and execution
 - Client communication patterns
 
-### **🌐 [Webhook Server Architecture](./webhook-server-architecture)**
+### **🌐 [Webhook Server Architecture](/dev/next/architecture/webhook-server-architecture)**
 - FastAPI-based webhook server
 - Slack event processing
 - Queue integration and event publishing
 - Security and authentication
 
-### **⚡ [Integrated Server Architecture](./integrated-server-architecture)**
+### **⚡ [Integrated Server Architecture](/dev/next/architecture/integrated-server-architecture)**
 - Combined MCP and webhook server deployment
 - Unified FastAPI application
 - Transport configuration options
