--- a/docs/contents/development/ci-cd/additional-ci-workflows.mdx
+++ b/docs/contents/development/ci-cd/additional-ci-workflows.mdx
@@ -185,7 +185,7 @@ These additional CI workflows integrate with the main CI/CD system:
 
 ## Navigation
 
-- **🏠 [CI/CD Overview](./index)** - Return to main CI/CD hub
+- **🏠 [CI/CD Overview](/dev/next/ci-cd)** - Return to main CI/CD hub
 - **📋 [Continuous Integration](./continuous-integration)** - Main CI workflows and testing
 - **🔄 [Release System](./release-system)** - Production releases and deployment
 - **🛠️ [Developer Guide](./developer-guide)** - Configuration and troubleshooting
