--- a/docs/contents/development/ci-cd/continuous-integration.mdx
+++ b/docs/contents/development/ci-cd/continuous-integration.mdx
@@ -145,7 +145,7 @@ The project uses a dedicated workflow from the template repository ([`rw_uv_run_
 
 ## Navigation
 
-- **🏠 [CI/CD Overview](./index)** - Return to main CI/CD hub
+- **🏠 [CI/CD Overview](/dev/next/ci-cd)** - Return to main CI/CD hub
 - **🔄 [Release System](./release-system)** - Learn about releases and deployment
 - **⚙️ [Additional CI Workflows](./additional-ci-workflows)** - Specialized utility workflows
 - **🛠️ [Developer Guide](./developer-guide)** - Configuration and troubleshooting
