--- a/docs/dev_versioned_docs/version-0.0.1/ci-cd/index.mdx
+++ b/docs/dev_versioned_docs/version-0.0.1/ci-cd/index.mdx
@@ -11,7 +11,7 @@ This section describes the Continuous Integration and Continuous Deployment (CI/
 
 Our CI/CD system is organized into focused, developer-friendly sections:
 
-### **📋 [Continuous Integration](./continuous-integration)**
+### **📋 [Continuous Integration](/dev/0.0.1/ci-cd/continuous-integration)**
 
 [![CI](https://github.com/Chisanan232/slack-mcp-server/actions/workflows/ci.yaml/badge.svg)](https://github.com/Chisanan232/slack-mcp-server/actions/workflows/ci.yaml)
 [![CI + E2E](https://github.com/Chisanan232/slack-mcp-server/actions/workflows/ci_includes_e2e_test.yaml/badge.svg)](https://github.com/Chisanan232/slack-mcp-server/actions/workflows/ci_includes_e2e_test.yaml)
@@ -21,7 +21,7 @@ Our CI/CD system is organized into focused, developer-friendly sections:
 - **Code quality checks and coverage reporting**
 - **Test automation and validation**
 
-### **🔄 [Release System](./release-system)**
+### **🔄 [Release System](/dev/0.0.1/ci-cd/release-system)**
 
 [![Release Validation](https://github.com/Chisanan232/slack-mcp-server/actions/workflows/release-validate.yml/badge.svg)](https://github.com/Chisanan232/slack-mcp-server/actions/workflows/release-validate.yml)
 [![Release](https://github.com/Chisanan232/slack-mcp-server/actions/workflows/release.yml/badge.svg)](https://github.com/Chisanan232/slack-mcp-server/actions/workflows/release.yml)
@@ -32,7 +32,7 @@ Our CI/CD system is organized into focused, developer-friendly sections:
 - **Release intent configuration and supply chain security**
 - **Git synchronization fixes and version management**
 
-### **📖 [Documentation Deployment](./documentation-deployment)**  
+### **📖 [Documentation Deployment](/dev/0.0.1/ci-cd/documentation-deployment)**  
 
 [![Documentation](https://github.com/Chisanan232/slack-mcp-server/actions/workflows/documentation.yaml/badge.svg)](https://github.com/Chisanan232/slack-mcp-server/actions/workflows/documentation.yaml)
 
@@ -41,12 +41,12 @@ Our CI/CD system is organized into focused, developer-friendly sections:
 - **Dual-trigger architecture solving GitHub Actions limitations**
 - **Guard job logic and troubleshooting**
 
-### **🔧 [Reusable Workflows](./reusable-workflows)**
+### **🔧 [Reusable Workflows](/dev/0.0.1/ci-cd/reusable-workflows)**
 - **Docker, Python, and documentation operations**
 - **Workflow integration patterns and architecture**
 - **Standardized operations and DRY principles**
 
-### **⚙️ [Additional CI Workflows](./additional-ci-workflows)**
+### **⚙️ [Additional CI Workflows](/dev/0.0.1/ci-cd/additional-ci-workflows)**
 
 [![Validate Slack Event Types](https://github.com/Chisanan232/slack-mcp-server/actions/workflows/validate_slack_event_types.yml/badge.svg)](https://github.com/Chisanan232/slack-mcp-server/actions/workflows/validate_slack_event_types.yml)
 [![Docker CI](https://github.com/Chisanan232/slack-mcp-server/actions/workflows/docker-ci.yml/badge.svg)](https://github.com/Chisanan232/slack-mcp-server/actions/workflows/docker-ci.yml)
@@ -58,7 +58,7 @@ Our CI/CD system is organized into focused, developer-friendly sections:
 - **DockerHub README CI** - Repository description synchronization
 - **Documentation Auto-Approve & Auto-Merge** - Streamlined docs updates
 
-### **🛠️ [Developer Guide](./developer-guide)**
+### **🛠️ [Developer Guide](/dev/0.0.1/ci-cd/developer-guide)**
 - **Configuration and troubleshooting**
 - **Best practices for contributors**
 - **Common workflows and monitoring**
@@ -86,12 +86,12 @@ We use **GitHub Actions** to automate testing, code quality checks, and deployme
 
 **New to our CI/CD system?** Start with:
 
-1. **📋 [Continuous Integration](./continuous-integration)** - Understand our testing and quality workflows
-2. **🔄 [Release System](./release-system)** - Learn about our release process and configuration
-3. **🛠️ [Developer Guide](./developer-guide)** - Find practical examples and troubleshooting tips
+1. **📋 [Continuous Integration](/dev/0.0.1/ci-cd/continuous-integration)** - Understand our testing and quality workflows
+2. **🔄 [Release System](/dev/0.0.1/ci-cd/release-system)** - Learn about our release process and configuration
+3. **🛠️ [Developer Guide](/dev/0.0.1/ci-cd/developer-guide)** - Find practical examples and troubleshooting tips
 
 **Need specific information?**
-- **Configuring releases:** → [Release System](./release-system)
-- **Documentation not deploying:** → [Documentation Deployment](./documentation-deployment)  
-- **Understanding workflow patterns:** → [Reusable Workflows](./reusable-workflows)
-- **Troubleshooting issues:** → [Developer Guide](./developer-guide)
+- **Configuring releases:** → [Release System](/dev/0.0.1/ci-cd/release-system)
+- **Documentation not deploying:** → [Documentation Deployment](/dev/0.0.1/ci-cd/documentation-deployment)  
+- **Understanding workflow patterns:** → [Reusable Workflows](/dev/0.0.1/ci-cd/reusable-workflows)
+- **Troubleshooting issues:** → [Developer Guide](/dev/0.0.1/ci-cd/developer-guide)
