--- a/docs/dev_versioned_docs/version-0.0.1/index.mdx
+++ b/docs/dev_versioned_docs/version-0.0.1/index.mdx
@@ -20,9 +20,9 @@ If you're new to the project, we recommend starting with these sections:
 
 Once you're familiar with the basics, you can explore:
 
-- [Software Architecture](./architecture/) - Overview of the project architecture
+- [Software Architecture](/dev/0.0.1/architecture) - Overview of the project architecture
 - [CI/CD Workflows](./ci-cd/index.mdx) - Continuous Integration and Deployment processes
 
 ## Contributing
 
-We welcome contributions! Before submitting code, please make sure you've read the [Contributing Guide](/docs/contribute) as well as the detailed development sections in this guide.
+We welcome contributions! Before submitting code, please make sure you've read the [Contributing Guide](/docs/0.0.1/contribute) as well as the detailed development sections in this guide.
