➕ Mention the GitHub template repo for the message queue backend component info in the document.

--- a/docs/contents/development/architecture/event-handler-queue-architecture.mdx
+++ b/docs/contents/development/architecture/event-handler-queue-architecture.mdx
@@ -104,6 +104,12 @@ export QUEUE_BACKEND=redis
 
 ### Developing Custom Queue Backends
 
+:::tip Backend Development Template
+Use the **[Slack MCP Server Backend MQ Template](https://github.com/Chisanan232/Slack-MCP-Server-Backend-MQ-Template)** to quickly create custom queue backend plugins. This template provides a complete project structure with best practices, CI/CD workflows, and comprehensive documentation.
+
+📚 **Template Documentation**: [https://chisanan232.github.io/Slack-MCP-Server-Backend-MQ-Template/](https://chisanan232.github.io/Slack-MCP-Server-Backend-MQ-Template/)
+:::
+
 #### 1. Implement the Protocol
 
 Create a class that implements the `QueueBackend` protocol:
