--- a/docs/contents/document/contribute/index.mdx
+++ b/docs/contents/document/contribute/index.mdx
@@ -30,6 +30,20 @@ Have an idea for a new feature or improvement? We'd love to hear it! Check out o
 
 Have questions or want to discuss aspects of the project? Join the conversation in our [discussion forum](./discuss.mdx) or start a new thread.
 
+### Develop Queue Backend Plugins
+
+Want to extend Slack MCP Server with support for additional message queue systems? You can create custom queue backend plugins for systems like RabbitMQ, AWS SQS, Google Pub/Sub, or any other message queue.
+
+Use the **[Slack MCP Server Backend MQ Template](https://github.com/Chisanan232/Slack-MCP-Server-Backend-MQ-Template)** to get started quickly with:
+- Complete project structure and best practices
+- Pre-configured CI/CD workflows
+- Comprehensive documentation templates
+- Example implementations
+
+📚 **Template Documentation**: [https://chisanan232.github.io/Slack-MCP-Server-Backend-MQ-Template/](https://chisanan232.github.io/Slack-MCP-Server-Backend-MQ-Template/)
+
+For detailed information on the `QueueBackend` protocol and plugin architecture, see the [Event Handler & Queue Architecture](/dev/next/architecture/event-handler-queue-architecture#developing-custom-queue-backends) documentation.
+
 ## Development Guide
 
 If you're interested in contributing code to the project, please refer to our [Development Guide](/dev/next/) for detailed information on:
